# amms-rs

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  book.toml  build.rs  dependabot.yml  dump.md  foundry.toml  note.txt  optimism_factories.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
.github/workflows/: book.yml  ci.yml  rust.yml
benches/: erc_4626.rs  state_space.rs  uniswap_v2.rs  uniswap_v3.rs  uniswapv2_simulate.rs
book/: SUMMARY.md  amms.md  factories.md  intro.md  pools.md  simple_arb.md  simulation.md  state_space.md  subscribe.md  syncing.md
book/static/: mermaid-init.js  mermaid.min.js  solidity.min.js
contracts/: GetERC4626VaultDataBatchRequest.sol  GetUniswapV2PairsBatchRequest.sol  GetUniswapV2PoolDataBatchRequest.sol  GetUniswapV3PoolDataBatchRequest.sol  GetWethValueInPoolBatchRequest.sol  GetiZiPoolDataBatchRequest.sol  SynciZiPoolDataBatchRequest.sol  foundry.toml
contracts/erc_4626/: GetERC4626VaultDataBatchRequest.sol
contracts/izumi/: GetiZiPoolDataBatchRequest.sol  SynciZiPoolDataBatchRequest.sol
contracts/scripts/: build.sh
contracts/src/: FixedPoint.sol  GetBalancerPoolDataBatchRequest.sol  GetBalancerV2PoolDataBatchRequest.sol  GetERC4626VaultDataBatchRequest.sol  GetUniswapV2PoolDataBatchRequest.sol  GetUniswapV3PoolDataBatchRequest.sol  GetUniswapV3TickDataBatchRequest.sol  GetWethValueInPoolBatchRequest.sol  SyncUniswapV3PoolBatchRequest.sol  UniswapV3LensSampler.sol  WethValueInPools.sol
contracts/src/Balancer/: GetBalancerPoolDataBatchRequest.sol
contracts/src/ERC20/: GetTokenDecimalsBatchRequest.sol
contracts/src/ERC4626/: GetERC4626VaultDataBatchRequest.sol
contracts/src/Interfaces/: IUniswapV3.sol
contracts/src/UniswapV2/: GetUniswapV2PairsBatchRequest.sol  GetUniswapV2PoolDataBatchRequest.sol
contracts/src/UniswapV3/: FixedPoint.sol  GetUniswapV3PoolDataBatchRequest.sol  GetUniswapV3PoolSlot0BatchRequest.sol  GetUniswapV3PoolTickBitmapBatchRequest.sol  GetUniswapV3PoolTickDataBatchRequest.sol  GetUniswapV3Slot0DataBatchRequest.sol
contracts/src/UniswapV3/interfaces/: IUniswapV2.sol
contracts/src/filters/: WethValueInPools.sol  WethValueInPoolsBatchRequest.sol
contracts/src/interfaces/: IBalancer.sol  IUniswapV2.sol  IUniswapV3.sol  Token.sol  token.sol
contracts/test/: FixedPoint.t.sol  GetUniswapV3TickDataBatchRequest.t.sol  GetWethValueInPoolBatchRequest.t.sol  Test.sol  WethValueInPools.t.sol  WethValueInPoolsBatchRequest.t.sol
contracts/uniswap_v2/: GetUniswapV2PoolDataBatchRequest.sol
contracts/uniswap_v3/: GetUniswapV3PoolDataBatchRequest.sol
docs/: addingAnAMM.md
examples/: artemis-collector.rs  bg-sampler.rs  create-new-pool.rs  discover-erc-4626-vaults.rs  discover-factories.rs  discover-factories_iotex.rs  discovery.rs  discovery_sandbox.rs  filter-value.rs  filters.rs  generate-mainnet-checkpoint.rs  listen-to-state-changes.rs  simulate-swap.rs  simulate_swap.rs  state-space.rs  state_space_builder.rs  subscribe.rs  swap-calldata.rs  swap_calldata.rs  sync-amms.rs  sync-checkpoint.rs  sync-pairs-with-ipc.rs  sync-pairs-with-throttle.rs  sync-pairs.rs  sync.rs  sync_from_factories.rs  sync_logs.rs  sync_macro.rs  sync_pools.rs
examples/state_space_exex/: Cargo.toml
examples/state_space_exex/src/: main.rs
src/: abi.rs  amm.rs  cfmm.rs  checkpoint.rs  errors.rs  factory.rs  interfaces.rs  lib.rs  progress_bar.rs  sync.rs  throttle.rs
src/amm/: consts.rs  factory.rs  mod.rs
src/amm/balancer/: bmath.rs  error.rs  factory.rs  mod.rs
src/amm/balancer/batch_request/: GetBalancerPoolDataBatchRequest.json  mod.rs
src/amm/balancer_v2/: bmath.rs  factory.rs  mod.rs
src/amm/balancer_v2/batch_request/: GetBalancerV2PoolDataBatchRequest.json  mod.rs
src/amm/erc_4626/: mod.rs
src/amm/erc_4626/batch_request/: GetERC4626VaultDataBatchRequestABI.json  mod.rs
src/amm/izumi/: factory.rs  mod.rs
src/amm/izumi/batch_request/: GetiZiPoolDataBatchRequest.json  SynciZiPoolDataBatchRequest.json  mod.rs
src/amm/uniswap_v2/: batch_requests.rs  factory.rs  mod.rs
src/amm/uniswap_v2/batch_request/: GetUniswapV2PairsBatchRequestABI.json  GetUniswapV2PoolDataBatchRequestABI.json  mod.rs
src/amm/uniswap_v3/: batch_requests.rs  factory.rs  mod.rs
src/amm/uniswap_v3/batch_request/: GetUniswapV3PoolDataBatchRequestABI.json  GetUniswapV3TickDataBatchRequestABI.json  SyncUniswapV3PoolBatchRequestABI.json  mod.rs
src/amm/x/: mod.rs
src/amms/: amm.rs  consts.rs  error.rs  factory.rs  float.rs  mod.rs
src/amms/abi/: GetBalancerPoolDataBatchRequest.json  GetERC4626VaultDataBatchRequest.json  GetTokenDecimalsBatchRequest.json  GetUniswapV2PairsBatchRequest.json  GetUniswapV2PoolDataBatchRequest.json  GetUniswapV3PoolDataBatchRequest.json  GetUniswapV3PoolSlot0BatchRequest.json  GetUniswapV3PoolTickBitmapBatchRequest.json  GetUniswapV3PoolTickDataBatchRequest.json  WethValueInPools.json  WethValueInPoolsBatchRequest.json
src/amms/balancer/: bmath.rs  mod.rs
src/amms/erc_4626/: mod.rs
src/amms/traits/: mod.rs
src/amms/uniswap_v2/: GetUniswapV2PairsBatchRequestABI.json  GetUniswapV2PoolDataBatchRequestABI.json  error.rs  mod.rs
src/amms/uniswap_v3/: error.rs  mod.rs
src/batch_requests/: mod.rs
src/batch_requests/uniswap_v2/: mod.rs
src/batch_requests/uniswap_v3/: mod.rs
src/dex/: mod.rs  uniswap_v2.rs  uniswap_v3.rs
src/discovery/: discovery_options.rs  erc_4626.rs  factory.rs  mod.rs
src/discovery/interface_check/: mod.rs
src/filters/: address.rs  mod.rs  value.rs
src/filters/batch_requests/: GetWethValueInAMMBatchRequest.json  mod.rs
src/pool/: fixed_point_math.rs  mod.rs  uniswap_v2.rs  uniswap_v3.rs
src/state_space/: cache.rs  collector.rs  discovery.rs  error.rs  exex.rs  filters.rs  mod.rs  state.rs  tokens.rs
src/state_space/filters/: blacklist.rs  filter.rs  mod.rs  value.rs  whitelist.rs
src/sync/: checkpoint.rs  mod.rs
src/uniswap_v2/: batch_request.rs  factory.rs  mod.rs
src/uniswap_v3/: factory.rs  mod.rs
(+1 files in other folders)
