[package]
name = "amms"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "A library to interact with automated market makers across EVM chains."
readme = "README.md"
homepage = "https://github.com/darkforestry/amms-rs"
repository = "https://github.com/darkforestry/amms-rs"
keywords = ["ethereum", "amm", "mev"]
exclude = ["target/*", ".github/*", ".gitignore", "build.rs", "contracts/*"]


[dependencies]
# darkforest
uniswap_v3_math = "0.6.1"

# alloy
alloy = { version = "1.0.3", features = [
  "contract",
  "network",
  "rpc",
  "rpc-types",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
] }

# tracing
eyre = "0.6"
tracing = "0.1"

# async
tokio = { version = "1.42", default-features = false }
futures = "0.3"
async-trait = "0.1"

# misc
arraydeque = "0.5"
thiserror = "1.0"
rug = "1.24.1"
itertools = "0.13.0"
rayon = "1.10.0"
async-stream = "0.3.6"
serde = "1.0"
heimdall-decompiler = { git = "https://github.com/Jon-Becker/heimdall-rs.git", rev = "1cbcfb9910c7be4e0f0eb23fb7935c04eefaa285" }

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3"
criterion = "0.5"
tokio = { version = "1.42", default-features = false, features = [
  "rt-multi-thread",
] }
alloy = { version = "1.2.1", features = ["rpc-client"] }
alloy-provider = { version = "1.2.1", features = ["throttle"] }


[build-dependencies]
serde_json = "1.0"
rayon = "1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = "full"


[[bench]]
name = "uniswap_v2"
harness = false

[[bench]]
name = "uniswap_v3"
harness = false

[[bench]]
name = "erc_4626"
harness = false
