[package]
name = "amms"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "A library to interact with automated market makers across EVM chains."
readme = "README.md"
homepage = "https://github.com/darkforestry/amms-rs"
repository = "https://github.com/darkforestry/amms-rs"
keywords = ["ethereum", "amm", "mev"]
exclude = ["target/*", ".github/*", ".gitignore", "build.rs", "contracts/*"]


[dependencies]
# darkforest
uniswap_v3_math = "0.6.1"

# alloy
alloy = { version = "1.0.25", features = [
  "contract",
  "network",
  "rpc",
  "rpc-types",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
] }

# tracing
eyre = "0.6"
tracing = "0.1"

# async
tokio = { version = "1.42", default-features = false }
futures = "0.3"
async-trait = "0.1"

# misc
arraydeque = "0.5"
thiserror = "1.0"
rug = "1.24.1"
itertools = "0.14.0"
rayon = "1.11.0"
async-stream = "0.3.6"
serde = "1.0"


[dev-dependencies]
rand = "0.9.2"
tracing-subscriber = "0.3"
criterion = "0.7"
tokio = { version = "1.42", default-features = false, features = [
  "rt-multi-thread",
] }
alloy = { version = "1.0.25", features = ["rpc-client"] }
alloy-provider = { version = "1.0.25", features = ["throttle"] }


[build-dependencies]
serde_json = "1.0"
rayon = "1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = "full"


[[bench]]
name = "uniswap_v2"
harness = false

[[bench]]
name = "uniswap_v3"
harness = false

[[bench]]
name = "erc_4626"
harness = false
