[package]
name = "state_space_exex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amms = { path = "../.." }
eyre = "0.6.12"
reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "ac0a005dd0ca7a03ae61af7ab7a3ef4bf07b1f3b" }
